--- a/tramites/src/main/webapp/app/comun/tramites/area/acreditacion/solicitud01.xhtml
+++ b/tramites/src/main/webapp/app/comun/tramites/area/acreditacion/solicitud01.xhtml
@@ -20,7 +20,7 @@
                         <p:panelGrid columns="2" columnClasses="ui-g-12 ui-md-4 col4_left, ui-g-12 ui-md-8 col8_left"
                                      style="margin: 0 auto; width: 70%;"
                                      styleClass="form-group ui-panelgrid-blank" layout="grid">
-                            <p:outputLabel value="Código infraestructura"/>
+                            <p:outputLabel value="Centro Educativo"/>
                             <p:autoComplete value="#{solicitud01View.entidadEducativaDto}" completeMethod="#{solicitud01View.completeEntidadEducativa}">
                                 <p:ajax event="itemSelect" update="txtDepartamento txtMunicipio txtModalidad"/>
                             </p:autoComplete>
