--- a/tramites/src/main/webapp/app/tramites/area/acreditacion/solicitud01.xhtml
+++ b/tramites/src/main/webapp/app/tramites/area/acreditacion/solicitud01.xhtml
@@ -14,11 +14,10 @@
 
     <ui:define name="contenido">
         <div id="pricing">
-            <div class="ui-g ui-fluid">
+            <div class="ui-g ui-fluid">                
                 <p:outputPanel style="width: 100%" id="outTipoTramite">
-                    <p:panelGrid columns="2" columnClasses="col4_label,col8_left"
-                                 style="margin: 0 auto; width: 70%;"
-                                 styleClass="form-group ui-panelgrid-blank" >
+                    <p:panelGrid columns="2" columnClasses="col4_label,col8_left" style="margin: 0 auto; width: 70%;" styleClass="form-group ui-panelgrid-blank"
+                                 rendered="#{solicitud01View.ocultarPanel}">
                         <p:outputLabel value="Centro Educativo"/>
                         <p:autoComplete value="#{solicitud01View.entidadEducativaDto}" completeMethod="#{solicitud01View.completeEntidadEducativa}">
                             <p:ajax event="itemSelect" update="txtDepartamento txtMunicipio txtModalidad"/>
@@ -66,10 +65,25 @@
                         </p:selectOneRadio> 
                     </p:panelGrid>
 
-                    <p:commandButton value="Guardar" style="width: 200px; margin: 0 auto;" action="#{solicitud01View.guardar()}" />
+                    <p:commandButton value="Guardar" style="width: 200px; margin: 0 auto;" action="#{solicitud01View.guardar()}" onclick="PF('dlgEsperar').show();"
+                                     onsuccess="updateDlgMensaje();"  update="outTipoTramite" />
                 </p:outputPanel>
 
                 <p:remoteCommand name="updateGrado" update="cboGrado" action="#{solicitud01View.findLstGrados}" />
+
+                <p:remoteCommand name="updateDlgMensaje" update="pngDlg" action="#{solicitud01View.actualizarDlgEspera()}" />
+
+                <p:dialog modal="true" id="dlgEsperar" widgetVar="dlgEsperar" closable="false" draggable="false" 
+                          minimizable="false" resizable="false" height="150" width="500">
+                    <h:panelGrid id="pngDlg" columnClasses="col2, col10" columns="2" style="width: 100%; height: 100%;">
+                        <i class="#{solicitud01View.iconDlgEspera}"></i>
+                        <p:outputPanel>
+                            <p:outputLabel value="#{solicitud01View.msjDlgEspera}" style="font-size: 16px;"/>
+                            <br/><br/>
+                            <p:commandButton value="Aceptar" action="#{solicitud01View.retornar}" rendered="#{solicitud01View.showBotonAceptar}" style="width: 120px;" />
+                        </p:outputPanel>
+                    </h:panelGrid>
+                </p:dialog>
             </div>
         </div>
 
