--- a/tramites/src/main/webapp/app/tramites/area/acreditacion/solicitud02.xhtml
+++ b/tramites/src/main/webapp/app/tramites/area/acreditacion/solicitud02.xhtml
@@ -20,8 +20,7 @@
                                  style="margin: 0 auto; width: 70%;"
                                  styleClass="form-group ui-panelgrid-blank" layout="grid">
                         <p:outputLabel value="País donde estudió"/>
-                        <p:autoComplete id="autoPais" value="#{solicitud02View.codigoPais}" completeMethod="#{solicitud02View.completePais}" var="pais" 
-                                        itemValue="#{pais.codigoPais}" itemLabel="#{pais.nombrePais}">
+                        <p:autoComplete id="autoPais" value="#{solicitud02View.pais}" completeMethod="#{solicitud02View.completePais}">
                             <p:ajax event="itemSelect" />
                         </p:autoComplete>
                         <p:outputLabel value="Ciudad"/>
@@ -30,23 +29,39 @@
                             <p:ajax event="itemSelect" />
                         </p:autoComplete>
                         <p:outputLabel value="Grado académico obtenido"/>
-                        <p:inputText />
+                        <p:inputText value="#{solicitud02View.solicitud02.gradoObtenido}"/>
                     </p:panelGrid>
 
                     <p:panelGrid columns="1" style="margin: 0 auto; width: 70%" styleClass="form-group ui-panelgrid-blank" layout="grid"
                                  columnClasses="col12_left">
                         <p:outputLabel value="Documentos que presentará"/>
-                        <p:selectManyCheckbox layout="responsive" columns="3" >
+                        <p:selectManyCheckbox layout="responsive" columns="3" value="#{solicitud02View.tramites}">
                             <f:selectItem itemLabel="Título" itemValue="0"/>
                             <f:selectItem itemLabel="Diploma" itemValue="1"/>
                             <f:selectItem itemLabel="Certificado" itemValue="2"/>
                         </p:selectManyCheckbox> 
                         <p:outputLabel value="Extendido por:"/>
-                        <p:inputText />
+                        <p:inputText value="#{solicitud02View.solicitud02.extendidoPor}"/>
                     </p:panelGrid>
 
-                    <p:commandButton value="Guardar" style="width: 200px; margin: 0 auto;" />
+                    <p:commandButton value="Guardar" style="width: 200px; margin: 0 auto;" action="#{solicitud02View.guardar()}" onclick="PF('dlgEsperar').show();"
+                                     onsuccess="updateDlgMensaje();"  update="outTipoTramite" />
                 </p:outputPanel>
+                
+                
+                <p:remoteCommand name="updateDlgMensaje" update="pngDlg" action="#{solicitud02View.actualizarDlgEspera()}" />
+
+                <p:dialog modal="true" id="dlgEsperar" widgetVar="dlgEsperar" closable="false" draggable="false" 
+                          minimizable="false" resizable="false" height="150" width="500">
+                    <h:panelGrid id="pngDlg" columnClasses="col2, col10" columns="2" style="width: 100%; height: 100%;">
+                        <i class="#{solicitud02View.iconDlgEspera}"></i>
+                        <p:outputPanel>
+                            <p:outputLabel value="#{solicitud02View.msjDlgEspera}" style="font-size: 16px;"/>
+                            <br/><br/>
+                            <p:commandButton value="Aceptar" action="#{solicitud02View.retornar}" rendered="#{solicitud02View.showBotonAceptar}" style="width: 120px;" />
+                        </p:outputPanel>
+                    </h:panelGrid>
+                </p:dialog>
             </div>
         </div>
 
