--- a/tramites/src/main/webapp/app/registro.xhtml
+++ b/tramites/src/main/webapp/app/registro.xhtml
@@ -70,7 +70,7 @@
                         <br/>
                         <p:commandButton value="Siguiente" style="width: 200px; margin: 0 auto;" action="#{registroView.siguiente}"
                                          rendered="#{(registroView.tipoPersona eq 'E') or (registroView.tipoPersona eq 'O')}"
-                                         update="out"/>
+                                         update="out" ajax="false"/>
                     </p:outputPanel>
 
 
