--- a/tramites/src/main/webapp/app/tramites/area/acreditacion/solicitud01.xhtml
+++ b/tramites/src/main/webapp/app/tramites/area/acreditacion/solicitud01.xhtml
@@ -4,7 +4,8 @@
     xmlns:h="http://java.sun.com/jsf/html"
     xmlns:p="http://primefaces.org/ui"
     xmlns:f="http://java.sun.com/jsf/core"
-    template="#{pageContext.servletContext.contextPath}/resources/template/plantilla.xhtml">
+    template="#{pageContext.servletContext.contextPath}/resources/template/plantilla.xhtml"
+    xmlns:jsf="http://xmlns.jcp.org/jsf">
 
     <ui:define name="titulo">
         <div class="header-content">
@@ -14,12 +15,12 @@
 
     <ui:define name="contenido">
         <div id="pricing">
-            <div class="ui-g ui-fluid">                
-                <p:outputPanel style="width: 100%" id="outTipoTramite">
+            <div jsf:id="divDatos" class="ui-g ui-fluid">                
+                <p:outputPanel style="width: 100%" rendered="#{not solicitud01View.showPanelDatos}">
                     <p:panelGrid columns="2" columnClasses="col4_label,col8_left" style="margin: 0 auto; width: 70%;" styleClass="form-group ui-panelgrid-blank"
                                  rendered="#{solicitud01View.ocultarPanel}">
-                        <p:outputLabel value="Centro Educativo"/>
-                        <p:autoComplete value="#{solicitud01View.entidadEducativaDto}" completeMethod="#{solicitud01View.completeEntidadEducativa}">
+                        <p:outputLabel value="Centro Educativo" for="txtCodigoEntidad"/>
+                        <p:autoComplete id="txtCodigoEntidad" value="#{solicitud01View.entidadEducativaDto}" completeMethod="#{solicitud01View.completeEntidadEducativa}" required="true" forceSelection="true">
                             <p:ajax event="itemSelect" update="txtDepartamento txtMunicipio txtModalidad"/>
                         </p:autoComplete>
                         <p:outputLabel value="Departamento"/>
@@ -28,27 +29,20 @@
                         <p:inputText id="txtMunicipio" value="#{solicitud01View.entidadEducativaDto.nombreMunicipio}" readonly="true"/>
                         <p:outputLabel value="Modalidad Educativa"/>
                         <p:inputText id="txtModalidad" value="#{solicitud01View.entidadEducativaDto.inicialesModalidad}" readonly="true"/>
-                        <p:outputLabel value="Año"/>
-                        <p:inputMask id="txtAnho" value="#{solicitud01View.anho}" mask="9999" onchange="updateGrado();"/>
-                        <p:outputLabel value="Grado"/>
-                        <p:selectOneMenu id="cboGrado" value="#{solicitud01View.grado}">
-                            <f:selectItem itemLabel="Seleccione un valor" noSelectionOption="true"/>
-                            <f:selectItems value="#{solicitud01View.lstGrado}" var="grado" itemValue="#{grado.codigoGrado}" itemLabel="#{grado.grado}"/>
-                            <p:ajax update="cboOpcion"  listener="#{solicitud01View.findLstOpcion}"/>
-                        </p:selectOneMenu>
-                        <p:outputLabel value="Opción"/>
-                        <p:selectOneMenu id="cboOpcion" value="#{solicitud01View.opcion}">
-                            <f:selectItem itemLabel="Seleccione un valor" noSelectionOption="true"/>
-                            <f:selectItems value="#{solicitud01View.lstOpcion}" var="opcion" itemValue="#{opcion.codigoOpcion}" itemLabel="#{opcion.opcionBach}"/>
-                        </p:selectOneMenu>
-                        <p:outputLabel value="Tipo de trámite"/>
-                        <p:selectManyCheckbox layout="responsive" columns="1" value="#{solicitud01View.tramites}">
-                            <f:selectItem itemLabel="Certificación de notas" itemValue="0"/>
+                        <p:outputLabel value="Año" for="txtAnho"/>
+                        <p:inputMask id="txtAnho" value="#{solicitud01View.anho}" mask="9999" required="true"/>
+                        <p:outputLabel value="Grado" for="txtGrado"/>
+                        <p:inputText id="txtGrado" value="#{solicitud01View.solicitud01.gradoDes}" required="true"/>
+                        <p:outputLabel value="Opción" for="txtOpcion"/>
+                        <p:inputText id="txtOpcion" value="#{solicitud01View.solicitud01.opcion}" required="true"/>
+                        <p:outputLabel value="Tipo de trámite" for="ckbTramite"/>
+                        <p:selectManyCheckbox id="ckbTramite" layout="responsive" columns="1" value="#{solicitud01View.tramites}" required="true">
+                            <f:selectItem itemLabel="Certificación de notas" itemValue="0" noSelectionOption="true"/>
                             <f:selectItem itemLabel="Registro de título" itemValue="1"/>
                             <f:selectItem itemLabel="Reposición de título" itemValue="2"/>
                         </p:selectManyCheckbox> 
                         <p:outputLabel value="Modalidad de atención"/>
-                        <p:selectOneRadio layout="responsive" columns="1" value="#{solicitud01View.modalidad}">
+                        <p:selectOneRadio layout="responsive" columns="1" value="#{solicitud01View.modalidad}" >
                             <f:selectItem itemLabel="Regular" itemValue="0"/>
                             <f:selectItem itemLabel="Modalidades Flexibles" itemValue="1"/>
                         </p:selectOneRadio> 
@@ -57,33 +51,29 @@
                             <f:selectItem itemLabel="Ordinario" itemValue="0"/>
                             <f:selectItem itemLabel="Extraordinario o recuperación" itemValue="1"/>
                         </p:selectOneRadio> 
-                        <p:outputLabel value="Jornada de estudio"/>
-                        <p:selectOneRadio layout="responsive" columns="1" value="#{solicitud01View.jornada}">
+                        <p:outputLabel value="Jornada de estudio" for="sorJornada"/>
+                        <p:selectOneRadio id="sorJornada" layout="responsive" columns="1" value="#{solicitud01View.jornada}" required="true">
                             <f:selectItem itemLabel="Matutino" itemValue="0"/>
                             <f:selectItem itemLabel="Vespertino" itemValue="1"/>
                             <f:selectItem itemLabel="Nocturno" itemValue="2"/>
                         </p:selectOneRadio> 
                     </p:panelGrid>
 
-                    <p:commandButton value="Guardar" style="width: 200px; margin: 0 auto;" action="#{solicitud01View.guardar()}" onclick="PF('dlgEsperar').show();"
-                                     onsuccess="updateDlgMensaje();"  update="outTipoTramite" />
+                    <p:commandButton id="btnGuardar" value="Guardar" style="width: 200px; margin: 0 auto;" 
+                                     action="#{solicitud01View.guardar()}" update="divDatos" />
                 </p:outputPanel>
 
-                <p:remoteCommand name="updateGrado" update="cboGrado" action="#{solicitud01View.findLstGrados}" />
-
-                <p:remoteCommand name="updateDlgMensaje" update="pngDlg" action="#{solicitud01View.actualizarDlgEspera()}" />
-
-                <p:dialog modal="true" id="dlgEsperar" widgetVar="dlgEsperar" closable="false" draggable="false" 
-                          minimizable="false" resizable="false" height="150" width="500">
-                    <h:panelGrid id="pngDlg" columnClasses="col2, col10" columns="2" style="width: 100%; height: 100%;">
-                        <i class="#{solicitud01View.iconDlgEspera}"></i>
+                <p:outputPanel style="width: 100%" rendered="#{solicitud01View.showPanelDatos}">
+                    <h:panelGrid  columns="1" style="width: 100%; height: 100%;">
                         <p:outputPanel>
+                            <i class="#{solicitud01View.iconDlgEspera}"></i>
+                            <br/><br/>
                             <p:outputLabel value="#{solicitud01View.msjDlgEspera}" style="font-size: 16px;"/>
                             <br/><br/>
-                            <p:commandButton value="Aceptar" action="#{solicitud01View.retornar}" rendered="#{solicitud01View.showBotonAceptar}" style="width: 120px;" />
+                            <p:button value="Aceptar" outcome="/index" style="width: 120px;" />
                         </p:outputPanel>
                     </h:panelGrid>
-                </p:dialog>
+                </p:outputPanel>
             </div>
         </div>
 
