--- a/tramites/src/main/webapp/app/tramites/area/acreditacion/solicitud02.xhtml
+++ b/tramites/src/main/webapp/app/tramites/area/acreditacion/solicitud02.xhtml
@@ -4,7 +4,8 @@
     xmlns:h="http://java.sun.com/jsf/html"
     xmlns:p="http://primefaces.org/ui"
     xmlns:f="http://java.sun.com/jsf/core"
-    template="#{pageContext.servletContext.contextPath}/resources/template/plantilla.xhtml">
+    template="#{pageContext.servletContext.contextPath}/resources/template/plantilla.xhtml"
+    xmlns:jsf="http://xmlns.jcp.org/jsf">
 
     <ui:define name="titulo">
         <div class="header-content">
@@ -14,54 +15,51 @@
 
     <ui:define name="contenido">
         <div id="pricing">
-            <div class="ui-g ui-fluid">
-                <p:outputPanel style="width: 100%" id="outTipoTramite">
+            <div jsf:id="divDatos"  class="ui-g ui-fluid">
+                <p:outputPanel style="width: 100%" rendered="#{not solicitud02View.showPanelDatos}">
                     <p:panelGrid columns="2" columnClasses="ui-g-12 ui-md-4 col4_left, ui-g-12 ui-md-8 col8_left"
                                  style="margin: 0 auto; width: 70%;"
                                  styleClass="form-group ui-panelgrid-blank" layout="grid">
-                        <p:outputLabel value="País donde estudió"/>
-                        <p:autoComplete id="autoPais" value="#{solicitud02View.pais}" completeMethod="#{solicitud02View.completePais}">
+                        <p:outputLabel value="País donde estudió" for="autoPais"/>
+                        <p:autoComplete id="autoPais" value="#{solicitud02View.pais}" completeMethod="#{solicitud02View.completePais}" converter="paisConverter">
                             <p:ajax event="itemSelect" />
                         </p:autoComplete>
-                        <p:outputLabel value="Ciudad"/>
-                        <p:autoComplete id="autoCiudad" value="#{solicitud02View.idCiudad}" completeMethod="#{solicitud02View.completeCity}" var="ciudad"
-                                        itemValue="#{ciudad.idCiudad}" itemLabel="#{ciudad.nombreCiudad}">
+                        <p:outputLabel value="Ciudad" for="autoCiudad"/>
+                        <p:autoComplete id="autoCiudad" value="#{solicitud02View.ciudad}" completeMethod="#{solicitud02View.completeCity}" converter="ciudadConverter"
+                                        required="true" forceSelection="true">
                             <p:ajax event="itemSelect" />
                         </p:autoComplete>
-                        <p:outputLabel value="Grado académico obtenido"/>
-                        <p:inputText value="#{solicitud02View.solicitud02.gradoObtenido}"/>
+                        <p:outputLabel value="Grado académico obtenido" for="txtGrado"/>
+                        <p:inputText id="txtGrado" value="#{solicitud02View.solicitud02.gradoObtenido}" required="true"/>
                     </p:panelGrid>
 
                     <p:panelGrid columns="1" style="margin: 0 auto; width: 70%" styleClass="form-group ui-panelgrid-blank" layout="grid"
                                  columnClasses="col12_left">
-                        <p:outputLabel value="Documentos que presentará"/>
-                        <p:selectManyCheckbox layout="responsive" columns="3" value="#{solicitud02View.tramites}">
+                        <p:outputLabel value="Documentos que presentará" for="smcDocumento"/>
+                        <p:selectManyCheckbox id="smcDocumento" layout="responsive" columns="3" value="#{solicitud02View.tramites}" required="true">
                             <f:selectItem itemLabel="Título" itemValue="0"/>
                             <f:selectItem itemLabel="Diploma" itemValue="1"/>
                             <f:selectItem itemLabel="Certificado" itemValue="2"/>
                         </p:selectManyCheckbox> 
-                        <p:outputLabel value="Extendido por:"/>
-                        <p:inputText value="#{solicitud02View.solicitud02.extendidoPor}"/>
+                        <p:outputLabel value="Extendido por:" for="txtExtendido"/>
+                        <p:inputText id="txtExtendido" value="#{solicitud02View.solicitud02.extendidoPor}" required="true"/>
                     </p:panelGrid>
 
-                    <p:commandButton value="Guardar" style="width: 200px; margin: 0 auto;" action="#{solicitud02View.guardar()}" onclick="PF('dlgEsperar').show();"
-                                     onsuccess="updateDlgMensaje();"  update="outTipoTramite" />
+                    <p:commandButton value="Guardar" style="width: 200px; margin: 0 auto;" action="#{solicitud02View.guardar()}" 
+                                     update="divDatos" />
                 </p:outputPanel>
-                
-                
-                <p:remoteCommand name="updateDlgMensaje" update="pngDlg" action="#{solicitud02View.actualizarDlgEspera()}" />
 
-                <p:dialog modal="true" id="dlgEsperar" widgetVar="dlgEsperar" closable="false" draggable="false" 
-                          minimizable="false" resizable="false" height="150" width="500">
-                    <h:panelGrid id="pngDlg" columnClasses="col2, col10" columns="2" style="width: 100%; height: 100%;">
-                        <i class="#{solicitud02View.iconDlgEspera}"></i>
+                <p:outputPanel style="width: 100%" rendered="#{solicitud02View.showPanelDatos}">
+                    <h:panelGrid  columns="1" style="width: 100%; height: 100%;">
                         <p:outputPanel>
+                            <i class="#{solicitud02View.iconDlgEspera}"></i>
+                            <br/><br/>
                             <p:outputLabel value="#{solicitud02View.msjDlgEspera}" style="font-size: 16px;"/>
                             <br/><br/>
-                            <p:commandButton value="Aceptar" action="#{solicitud02View.retornar}" rendered="#{solicitud02View.showBotonAceptar}" style="width: 120px;" />
+                            <p:button value="Aceptar" outcome="/index" style="width: 120px;" />
                         </p:outputPanel>
                     </h:panelGrid>
-                </p:dialog>
+                </p:outputPanel>
             </div>
         </div>
 
