--- a/tramites/src/main/webapp/index.xhtml
+++ b/tramites/src/main/webapp/index.xhtml
@@ -1,14 +1,106 @@
-<?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
-    <h:head>
-        <title>Facelet Title</title>
-    </h:head>
-    <h:body>
-        Hello from Facelets
-        <br />
-        <h:link outcome="welcomePrimefaces" value="Primefaces welcome page" />
-    </h:body>
-</html>
+<ui:composition 
+    xmlns="http://www.w3.org/1999/xhtml"
+    xmlns:ui="http://java.sun.com/jsf/facelets"
+    xmlns:h="http://java.sun.com/jsf/html"
+    xmlns:p="http://primefaces.org/ui"
+    xmlns:f="http://java.sun.com/jsf/core"
+    template="#{pageContext.servletContext.contextPath}/resources/template/plantilla.xhtml">
 
+    <ui:define name="titulo">
+        <div class="header-content">
+            <h2 style="line-height: 1.5">Registre su información</h2>
+        </div>
+    </ui:define>
+
+    <ui:define name="contenido">
+        <div id="pricing">
+            <div class="ui-g ui-fluid">
+
+                <p:outputPanel style="width: 100%" id="out">
+                    <p:panelGrid id="outTipoPersona" columns="2" columnClasses="ui-g-12 ui-md-6, ui-g-12 ui-md-6"
+                                 style="margin: 0 auto; width: 70%;" rendered="#{registroView.showTipoPersona}"
+                                 styleClass="form-group ui-panelgrid-blank" layout="grid">
+                        <p:outputLabel value="¿Quién esta solicitando el trámite?"/>
+
+                        <p:selectOneRadio unselectable="false" value="#{registroView.tipoPersona}">
+                            <f:selectItem itemLabel="Estudiante" itemValue="E" />
+                            <f:selectItem itemLabel="Otra persona" itemValue="O" />
+                            <p:ajax update="out" event="change" listener="#{registroView.ocultarTipoPersona()}" />
+                        </p:selectOneRadio>
+                    </p:panelGrid>
+
+                    <p:outputPanel style="width: 100%" id="outPersona" rendered="#{registroView.showDatosGenerales}">
+                        <p:panelGrid columns="2" columnClasses="ui-g-12 ui-md-3 col3_left, ui-g-12 ui-md-9 col9_left"
+                                     style="margin: 0 auto; width: 70%;"
+                                     styleClass="form-group ui-panelgrid-blank" layout="grid" rendered="#{registroView.tipoPersona eq 'E'}">
+                            <p:outputLabel value="NIE "/>
+                            <p:inputNumber id="txtNie" value="#{registroView.nie}" size="12" onchange="updateEstudiante();" decimalPlaces="0" thousandSeparator=""/>
+                        </p:panelGrid>
+
+                        <p:panelGrid id="pngDatos" columns="2" columnClasses="ui-g-12 ui-md-3 col3_left, ui-g-12 ui-md-9 col9_left"
+                                     style="margin: 0 auto; width: 70%;"
+                                     styleClass="form-group ui-panelgrid-blank" layout="grid" rendered="#{(registroView.tipoPersona eq 'E') or (registroView.tipoPersona eq 'O')}">
+                            <p:outputLabel value="DUI "/>
+                            <p:inputMask id="txtDui" mask="99999999-9" value="#{registroView.dui}" size="12" onchange="updatePersona();"/>
+                            <p:outputLabel for="cboGenero" value="Genero "/>
+                            <p:selectOneMenu id="cboGenero" value="#{registroView.persona.genero}" required="true">
+                                <f:selectItem itemLabel="Seleccione un valor" noSelectionOption="true"/>
+                                <f:selectItem itemLabel="Masculino" itemValue="M"/>
+                                <f:selectItem itemLabel="Femenino" itemValue="F"/>
+                                <f:selectItem itemLabel="Indefinido" itemValue="I"/>
+                            </p:selectOneMenu>
+                            <p:outputLabel value="Nombres " for="txtNombre"/>
+                            <p:inputText id="txtNombre" value="#{registroView.persona.nombres}" required="true"/>
+                            <p:outputLabel for="txtApellido" value="Apellidos " />
+                            <p:inputText id="txtApellido" value="#{registroView.persona.apellidos}" required="true"/>
+                            <p:outputLabel for="txtCorreo" value="Correo electrónico "/>
+                            <p:inputText id="txtCorreo" value="#{registroView.persona.correoElectronico}" 
+                                         requiredMessage="Por favor ingrese un correo válido"
+                                         validatorMessage="El formato del correo no es el correcto">
+                                <f:validateRegex pattern="^[_A-Za-z0-9-\+]+(\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\.[A-Za-z0-9]+)*(\.[A-Za-z]{2,})$" />
+                            </p:inputText>
+                            <p:outputLabel value="Teléfono "/>
+                            <p:inputMask mask="9999-9999" value="#{registroView.persona.telefono}"/>
+                        </p:panelGrid>
+                        <br/><br/>
+                        <p:outputPanel style="text-align: center; margin: 0 auto; width: 70%" >
+                            <p:captcha id="divCaptcha" language="es"/>
+                        </p:outputPanel>
+
+                        <br/>
+                        <p:commandButton value="Siguiente" style="width: 200px; margin: 0 auto;" action="#{registroView.siguiente}"
+                                         rendered="#{(registroView.tipoPersona eq 'E') or (registroView.tipoPersona eq 'O')}"
+                                         update="out" ajax="false"/>
+                    </p:outputPanel>
+
+
+                    <p:outputPanel style="width: 100%" id="outTipoTramite" rendered="#{registroView.showTipoTramite}">
+                        <p:panelGrid columns="2" columnClasses="ui-g-12 ui-md-4 col4_left, ui-g-12 ui-md-8 col8_left"
+                                     style="margin: 0 auto; width: 70%;"
+                                     styleClass="form-group ui-panelgrid-blank" layout="grid">
+                            <p:outputLabel value="Tipo de trámite que solicita"/>
+                            <p:selectOneMenu value="#{registroView.idTipoTramite}"  >
+                                <f:selectItem itemLabel="Seleccione un valor" noSelectionOption="true"/>
+                                <f:selectItems value="#{registroView.lstTipoTramite}" var="tipo" itemValue="#{tipo.idTipoTramite}" itemLabel="#{tipo.descripcionTraminte}"/>
+                                <p:ajax onsuccess="onClick('btnGuardar')"/>
+                            </p:selectOneMenu>
+                        </p:panelGrid>
+                    </p:outputPanel>
+
+                </p:outputPanel>
+
+                <p:panel visible="false">
+                    <p:commandButton id="btnGuardar" value="ok" action="#{registroView.guardarTramite}" update="btnRedireccionar" oncomplete="onClick('btnRedireccionar')"/>
+
+                    <p:commandButton id="btnRedireccionar" value="ok" action="#{registroView.redireccionar}" >
+                        <f:param name="idTramite" value="#{registroView.tramite.idTramite}"/>
+                    </p:commandButton>
+                </p:panel>
+            </div>
+        </div>
+
+        <p:remoteCommand name="updateEstudiante" update="pngDatos" process="@this,txtNie" action="#{registroView.findEstudiante()}" />
+        <p:remoteCommand name="updatePersona" update="pngDatos" action="#{registroView.findPersona()}" process="@this, txtDui" />
+        <h:outputStylesheet name="main.css" library="css" />
+    </ui:define>
+</ui:composition>
